<resources>
    <string name="app_name">World Map Quiz</string>
    <string name="quizmaster">QuizMaster</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="share_app">Share App</string>
    <string name="quiz_app_logo">QUIZ APP LOGO</string>
    <string name="vibration">Vibration</string>
    <string name="app_info">Quiz App Info</string>
    <string name="music">Music</string>
</resources>